# sfu

./: meson.build
coeff/: exp2_coeffs.h  log2_coeffs.h  rcp_coeffs.h  rsqrte_coeffs.h  rsqrto_coeffs.h  sig_coeffs.h  sincos_coeffs.h  sqrte_coeffs.h  sqrto_coeffs.h
common/: utils.h
script/: gen_rcp_coeffs.py
src/: exp2.cpp  log2.cpp  rcp.cpp  rsq.cpp  sig.cpp  sin.cpp  sqrt.cpp
test/: test.cpp
